fix style bug content overflowing
fixed bug where content would overflow on the manager pages, due to no constraints of the container holding the options (clerks, categories etc.)

--- a/client/frontend/admin.css
+++ b/client/frontend/admin.css
@@ -39,6 +39,9 @@ input, button {
 
 .category-list {
     text-align: left;
+    max-height: 60%;
+    overflow: scroll;
+    overflow-x: hidden;
 }
 
 .category-item {
